# inference-with-constraints

./: Cargo.toml  README.md
iwc-arena/: Cargo.toml
iwc-arena/src/: lib.rs
iwc-core/: Cargo.toml
iwc-core-ast/: Cargo.toml
iwc-core-ast/src/: expr.rs  lib.rs  ty.rs
iwc-core-ast/src/expr/: traversal.rs  traversals.rs
iwc-core-ast/src/traversal/: expr.rs  ty.rs
iwc-core-ast/src/ty/: hash.rs  pretty.rs  traversal.rs  traversals.rs
iwc-core-check/: Cargo.toml
iwc-core-check/src/: lib.rs  unify.rs
iwc-core-constraint/: Cargo.toml
iwc-core-constraint/src/: lib.rs
iwc-core-constraints/: Cargo.toml
iwc-core-constraints/src/: lib.rs
iwc-core-elaborate/: Cargo.toml
iwc-core-elaborate/src/: context.rs  entail.rs  infer.rs  instantiate.rs  lib.rs  solve.rs  unify.rs
iwc-core-error/: Cargo.toml
iwc-core-error/src/: lib.rs
iwc-core-infer/: Cargo.toml
iwc-core-infer/src/: check.rs  infer.rs  instantiate.rs  lib.rs  unify.rs
iwc-core-solve/: Cargo.toml
iwc-core-solve/src/: entail.rs  lib.rs  solve.rs
iwc-core-tck/: Cargo.toml
iwc-core-tck/src/: context.rs  lib.rs  solver.rs
iwc-core-tck/src/context/: common.rs  entail.rs  env.rs  environment.rs  infer.rs  instantiate.rs  solve.rs  unify.rs  volatile.rs
iwc-core-tck/src/solver/: solve.rs
iwc-core/src/: context.rs  lib.rs  types.rs
iwc-core/src/context/: env.rs  expr.rs  infer.rs  solve.rs  traversals.rs  ty.rs  unify.rs
iwc-core/src/types/: traversals.rs
