[package]
name = "iwc-core-solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iwc-arena = { version = "0.1.0", path = "../iwc-arena" }
iwc-core-ast = { version = "0.1.0", path = "../iwc-core-ast" }
iwc-core-constraint = { version = "0.1.0", path = "../iwc-core-constraint" }
iwc-core-error = { version = "0.1.0", path = "../iwc-core-error" }
iwc-core-infer = { version = "0.1.0", path = "../iwc-core-infer" }
smol_str = "0.2.0"
